@@ -1,7 +1,18 @@
+/**
+ * ***************************************************************************** 
+ * Copyright (c) 2025 Fraunhofer IEM, Paderborn, Germany. This program and the
+ * accompanying materials are made available under the terms of the Eclipse
+ * Public License 2.0 which is available at http://www.eclipse.org/legal/epl-2.0.
+ *
+ * <p>SPDX-License-Identifier: EPL-2.0
+ *
+ * <p>Contributors: Johannes Spaeth - initial API and implementation
+ * *****************************************************************************
+ */
 package boomerang.weights;
 
-import boomerang.scene.Statement;
-import boomerang.scene.Val;
+import boomerang.scope.Statement;
+import boomerang.scope.Val;
 import sync.pds.solver.WeightFunctions;
 import sync.pds.solver.nodes.Node;
 
@@ -12,7 +23,7 @@ public class MinDistanceWeightFunctions
   public MinDistanceWeight push(
       Node<Statement, Val> curr, Node<Statement, Val> succ, Statement callSite) {
     if (!curr.fact().isStatic()) {
-      return new MinDistanceWeight(new Integer(1));
+      return new MinDistanceWeight(Integer.valueOf(1));
     }
     return MinDistanceWeight.one();
   }
@@ -20,10 +31,10 @@ public class MinDistanceWeightFunctions
   @Override
   public MinDistanceWeight normal(Node<Statement, Val> curr, Node<Statement, Val> succ) {
     if (!curr.fact().equals(succ.fact())) {
-      return new MinDistanceWeight(new Integer(1));
+      return new MinDistanceWeight(Integer.valueOf(1));
     }
     if (succ.stmt().containsInvokeExpr() && succ.stmt().uses(curr.fact())) {
-      return new MinDistanceWeight(new Integer(1));
+      return new MinDistanceWeight(Integer.valueOf(1));
     }
     return MinDistanceWeight.one();
   }
